Remove inline styles and link to external stylesheet

--- a/page1.html
+++ b/page1.html
@@ -5,16 +5,7 @@
 <title>AWS Solution Architect Practice Test – Page 1</title>
 
 <style>
-body { font-family: Arial, sans-serif; background:#f4f6f9; padding:20px; }
-.container { max-width:1200px; margin:auto; }
-h1 { text-align:center; }
-.question { background:#fff; padding:20px; margin-bottom:20px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,.08); }
-pre { white-space:pre-wrap; font-weight:600; }
-.options label { display:block; padding:8px; cursor:pointer; border-radius:5px; }
-.options input { margin-right:8px; }
-.correct { background:#d4edda; border:1px solid #28a745; }
-.explanation { display:none; margin-top:12px; padding:12px; background:#eef5ff; border-left:4px solid #0073bb; }
-button { margin-top:10px; padding:8px 16px; background:#0073bb; color:#fff; border:none; border-radius:5px; cursor:pointer; }
+<link rel="stylesheet" href="style.css">
 </style>
 </head>
 
