--- a/page1.html
+++ b/page1.html
@@ -14,6 +14,7 @@
 
 <!-- ================= Q1 ================= -->
 <div class="question">
+<div class="question">
 <pre>
 1) A company needs to architect a hybrid DNS solution. This solution will use an Amazon Route 53 private hosted zone for the domain cloud.example.com for the resources stored within VPCs.
 The company has the following DNS resolution requirements:
@@ -24,21 +25,47 @@ Which architecture should the company use to meet these requirements with the HI
 </pre>
 
 <div class="options">
-<label><input type="radio" name="q1">A. Associate the private hosted zone to all the VPCs. Create a Route 53 inbound resolver in the shared services VPC. Attach all VPCs to the transit gateway and create forwarding rules in the on-premises DNS server for cloud.example.com that point to the inbound resolver.</label>
-<label><input type="radio" name="q1">B. Associate the private hosted zone to all the VPCs. Deploy an Amazon EC2 conditional forwarder in the shared services VPC. Attach all VPCs to the transit gateway and create forwarding rules in the on-premises DNS server for cloud.example.com that point to the conditional forwarder.</label>
-<label><input type="radio" name="q1">C. Associate the private hosted zone to the shared services VPCreate a Route 53 outbound resolver in the shared services VPAttach all VPCs to the transit gateway and create forwarding rules in the on-premises DNS server for cloud.example.com that point to the outbound resolver.</label>
-<label><input type="radio" name="q1">D. Associate the private hosted zone to the shared services VPC. Create a Route 53 inbound resolver in the shared services VPC. Attach the shared services VPC to the transit gateway and create forwarding rules in the on-premises DNS server for cloud.example.com that point to the inbound resolver.</label>
+<label>
+<input type="radio" name="q1">
+A. Associate the private hosted zone to all the VPCs. Create a Route 53 inbound resolver in the shared services VPC. Attach all VPCs to the transit gateway and create forwarding rules in the on-premises DNS server for cloud.example.com that point to the inbound resolver. Most Voted
+</label>
+
+<label>
+<input type="radio" name="q1">
+B. Associate the private hosted zone to all the VPCs. Deploy an Amazon EC2 conditional forwarder in the shared services VPC. Attach all VPCs to the transit gateway and create forwarding rules in the on-premises DNS server for cloud.example.com that point to the conditional forwarder.
+</label>
+
+<label>
+<input type="radio" name="q1">
+C. Associate the private hosted zone to the shared services VPCreate a Route 53 outbound resolver in the shared services VPAttach all VPCs to the transit gateway and create forwarding rules in the on-premises DNS server for cloud.example.com that point to the outbound resolver.
+</label>
+
+<label>
+<input type="radio" name="q1">
+D. Associate the private hosted zone to the shared services VPC. Create a Route 53 inbound resolver in the shared services VPC. Attach the shared services VPC to the transit gateway and create forwarding rules in the on-premises DNS server for cloud.example.com that point to the inbound resolver.
+</label>
 </div>
 
-<button onclick="showAnswer(this,[0])">Show Answer</button>
 <div class="explanation">
 <b>Correct Answer: A</b><br><br>
-Route 53 inbound resolvers are AWS-managed, highly available, and horizontally scalable.
-They are designed specifically for hybrid DNS resolution from on-premises to AWS.
-Associating the private hosted zone with all VPCs ensures native DNS resolution across AWS,
-and inbound resolvers allow on-premises systems to resolve private AWS DNS names over Direct Connect
-without EC2-based DNS forwarders, giving the highest performance.
+
+This question focuses on designing a <b>high-performance hybrid DNS architecture</b> between on-premises infrastructure and AWS.
+
+<b>AWS Direct Connect</b> provides a dedicated private network connection between the on-premises data center and AWS. Because traffic does not traverse the public internet, it offers lower latency, consistent performance, and higher reliability.
+
+<b>AWS Transit Gateway</b> acts as a central routing hub. All VPCs and the Direct Connect attachment connect to the Transit Gateway, allowing the on-premises network to communicate with multiple VPCs through a single, scalable routing point.
+
+<b>Route 53 Private Hosted Zones</b> store private DNS records that are resolvable only within VPCs that are explicitly associated with the hosted zone. Associating the hosted zone with <b>all VPCs</b> ensures that every VPC can resolve cloud.example.com natively.
+
+<b>Route 53 Inbound Resolver</b> allows on-premises DNS servers to forward DNS queries directly into AWS. It is fully managed by AWS, highly available across multiple Availability Zones, and automatically scalable. This eliminates the need to deploy and manage DNS servers on EC2 instances.
+
+<b>DNS resolution flow:</b><br>
+On-premises system → On-premises DNS server → AWS Direct Connect → Transit Gateway → Route 53 Inbound Resolver → Route 53 Private Hosted Zone → DNS response returned to on-premises.
+
+Because this design uses only AWS-managed networking and DNS services, avoids EC2-based DNS forwarding, and leverages Direct Connect for private connectivity, it delivers the <b>highest performance</b>. Therefore, option A is the correct answer.
 </div>
+</div>
+
 </div>
 
 <!-- ================= Q2 ================= -->
