Add button to show answer for question

--- a/page1.html
+++ b/page1.html
@@ -45,7 +45,7 @@ C. Associate the private hosted zone to the shared services VPCreate a Route 53 
 D. Associate the private hosted zone to the shared services VPC. Create a Route 53 inbound resolver in the shared services VPC. Attach the shared services VPC to the transit gateway and create forwarding rules in the on-premises DNS server for cloud.example.com that point to the inbound resolver.
 </label>
 </div>
-
+<button onclick="showAnswer(this,[2])">Show Answer</button>
 <div class="explanation">
 <b>Correct Answer: A</b><br><br>
 
