Update migration benefits for S3 and CloudFront
Clarified the benefits of migrating videos to S3 and CloudFront.

--- a/page2.html
+++ b/page2.html
@@ -355,7 +355,10 @@ Amazon CloudFront caches video content at edge locations close to users, reducin
 
 <br><br>
 
-Migrating videos to S3 and delivering them through CloudFront provi
+Migrating videos to S3 and delivering them through CloudFront provides the most cost-efficient and scalable solution.
+</div>
+</div>
+
 
 
 
