--- a/page1.html
+++ b/page1.html
@@ -497,6 +497,21 @@ This solution avoids application changes, Lambda functions, and monitoring logic
 </div>
 
 </div>
+<!-- ================= Navigation ================= -->
+<div style="text-align:center; margin: 40px 0;">
+  <a href="page2.html" style="
+      display:inline-block;
+      padding: 12px 28px;
+      background:#2563eb;
+      color:#fff;
+      font-size:15px;
+      font-weight:600;
+      border-radius:8px;
+      text-decoration:none;
+  ">
+    Next Page →
+  </a>
+</div>
 
 <script>
 function showAnswer(btn, correct) {
