--- a/page4.html
+++ b/page4.html
@@ -21,8 +21,21 @@
       font-weight:600;
       border-radius:8px;
       text-decoration:none;
+      margin-right:10px;
   ">
     ← Previous Page
+  </a>
+  <a href="page5.html" style="
+      display:inline-block;
+      padding: 12px 28px;
+      background:#6b7280;
+      color:#fff;
+      font-size:15px;
+      font-weight:600;
+      border-radius:8px;
+      text-decoration:none;
+  ">
+    Next Page →
   </a>
 </div>
 
@@ -2877,8 +2890,21 @@ Annual Savings: $1,447 × 12 = $17,364/year
       font-weight:600;
       border-radius:8px;
       text-decoration:none;
+      margin-right:10px;
   ">
     ← Previous Page
+  </a>
+  <a href="page5.html" style="
+      display:inline-block;
+      padding: 12px 28px;
+      background:#6b7280;
+      color:#fff;
+      font-size:15px;
+      font-weight:600;
+      border-radius:8px;
+      text-decoration:none;
+  ">
+    Next Page →
   </a>
 </div>
 
