--- a/page10.html
+++ b/page10.html
@@ -3445,6 +3445,193 @@ Safe WAF deployment with zero impact to legitimate traffic!
 </div>
 </div>
 
+<!-- ================= Q7 ================= -->
+<div class="question">
+<pre>
+98) A company has an organization that has many AWS accounts in AWS Organizations. A solutions architect must improve how the company manages common security group rules for the AWS accounts in the organization.
+
+The company has a common set of IP CIDR ranges in an allow list in each AWS account to allow access to and from the company's on-premises network. Developers within each account are responsible for adding new IP CIDR ranges to their security groups. The security team has its own AWS account. Currently, the security team notifies the owners of the other AWS accounts when changes are made to the allow list.
+
+The solutions architect must design a solution that distributes the common set of CIDR ranges across all accounts.
+
+Which solution meets these requirements with the LEAST amount of operational overhead?
+</pre>
+<div class="options">
+<label>
+<input type="radio" name="q7">
+A. Set up an Amazon Simple Notification Service (Amazon SNS) topic in the security team's AWS account. Deploy an AWS Lambda function in each AWS account. Configure the Lambda function to run every time an SNS topic receives a message. Configure the Lambda function to take an IP address as input and add it to a list of security groups in the account. Instruct the security team to distribute changes by publishing messages to its SNS topic.
+</label>
+
+<label>
+<input type="radio" name="q7">
+B. Create new customer-managed prefix lists in each AWS account within the organization. Populate the prefix lists in each account with all internal CIDR ranges. Notify the owner of each AWS account to allow the new customer-managed prefix list IDs in their accounts in their security groups. Instruct the security team to share updates with each AWS account owner.
+</label>
+
+<label>
+<input type="radio" name="q7">
+C. Create a new customer-managed prefix list in the security team's AWS account. Populate the customer-managed prefix list with all internal CIDR ranges. Share the customer-managed prefix list with the organization by using AWS Resource Access Manager. Notify the owner of each AWS account to allow the new customer-managed prefix list ID in their security groups.
+</label>
+
+<label>
+<input type="radio" name="q7">
+D. Create an IAM role in each account in the organization. Grant permissions to update security groups. Deploy an AWS Lambda function in the security team's AWS account. Configure the Lambda function to take a list of internal IP addresses as input, assume a role in each organization account, and add the list of IP addresses to the security groups in each account.
+</label>
+</div>
+
+<button onclick="checkAnswer(this,[2])">Check Answer</button>
+<button onclick="showAnswer(this,[2])">Show Answer</button>
+
+<div class="explanation">
+<button class="close-explanation" onclick="closeExplanation(this)">✕ Close</button>
+<b>Correct Answer: C</b><br><br>
+
+<b>Why Option C is Correct:</b><br>
+<ul>
+<li>✓ <b>Customer-managed prefix lists:</b> Central management of CIDR ranges</li>
+<li>✓ <b>AWS Resource Access Manager (RAM):</b> Share prefix list across organization</li>
+<li>✓ <b>Single source of truth:</b> Maintained in security account only</li>
+<li>✓ <b>Automatic updates:</b> Changes propagate to all accounts</li>
+<li>✓ <b>No custom code:</b> Native AWS service</li>
+<li>✓ <b>Least operational overhead:</b> Update once, applies everywhere</li>
+</ul><br>
+
+<b>How it works:</b>
+<pre>
+1. Security team creates prefix list in their account
+2. Add all internal CIDR ranges to prefix list
+3. Share prefix list via RAM with organization
+4. Account owners reference shared prefix list ID in security groups
+5. When security team updates prefix list, changes auto-apply
+</pre><br>
+
+<b>Why Other Options Are Wrong:</b><br>
+<b>Option A (SNS + Lambda):</b> Custom solution, higher maintenance overhead<br>
+<b>Option B (Prefix lists in each account):</b> Must update each account separately<br>
+<b>Option D (Lambda with cross-account roles):</b> Complex, requires custom code and IAM roles
+</div>
+</div>
+
+<!-- ================= Q8 ================= -->
+<div class="question">
+<pre>
+99) A company has introduced a new policy that allows employees to work remotely from their homes if they connect by using a VPN. The company is hosting internal applications with VPCs in multiple AWS accounts. Currently, the applications are accessible from the company's on-premises office network through an AWS Site-to-Site VPN connection. The VPC in the company's main AWS account has peering connections established with VPCs in other AWS accounts.
+
+A solutions architect must design a scalable AWS Client VPN solution for employees to use while they work from home.
+
+What is the MOST cost-effective solution that meets these requirements?
+</pre>
+<div class="options">
+<label>
+<input type="radio" name="q8">
+A. Create a Client VPN endpoint in each AWS account. Configure required routing that allows access to internal applications.
+</label>
+
+<label>
+<input type="radio" name="q8">
+B. Create a Client VPN endpoint in the main AWS account. Configure required routing that allows access to internal applications.
+</label>
+
+<label>
+<input type="radio" name="q8">
+C. Create a Client VPN endpoint in the main AWS account. Provision a transit gateway that is connected to each AWS account. Configure required routing that allows access to internal applications.
+</label>
+
+<label>
+<input type="radio" name="q8">
+D. Create a Client VPN endpoint in the main AWS account. Establish connectivity between the Client VPN endpoint and the AWS Site-to-Site VPN.
+</label>
+</div>
+
+<button onclick="checkAnswer(this,[2])">Check Answer</button>
+<button onclick="showAnswer(this,[2])">Show Answer</button>
+
+<div class="explanation">
+<button class="close-explanation" onclick="closeExplanation(this)">✕ Close</button>
+<b>Correct Answer: C</b><br><br>
+
+<b>Why Option C is Correct:</b><br>
+<ul>
+<li>✓ <b>Single Client VPN endpoint:</b> Centralized, cost-effective</li>
+<li>✓ <b>Transit Gateway:</b> Scalable connectivity hub for multiple VPCs/accounts</li>
+<li>✓ <b>Supports multi-account:</b> Routes traffic to all VPCs across accounts</li>
+<li>✓ <b>Scalable:</b> Easy to add new VPCs/accounts</li>
+<li>✓ <b>Cost-effective:</b> One endpoint vs. multiple endpoints</li>
+</ul><br>
+
+<b>Architecture:</b>
+<pre>
+Remote Employees → Client VPN Endpoint → Transit Gateway → All VPCs (multi-account)
+</pre><br>
+
+<b>Why Other Options Are Wrong:</b><br>
+<b>Option A:</b> Multiple Client VPN endpoints = Higher cost, complex management<br>
+<b>Option B:</b> VPC peering doesn't support transitive routing, won't reach all VPCs<br>
+<b>Option D:</b> Doesn't solve multi-account VPC access problem
+</div>
+</div>
+
+<!-- ================= Q9 ================= -->
+<div class="question">
+<pre>
+100) A company is running an application in the AWS Cloud. Recent application metrics show inconsistent response times and a significant increase in error rates. Calls to third-party services are causing the delays. Currently, the application calls third-party services synchronously by directly invoking an AWS Lambda function.
+
+A solutions architect needs to decouple the third-party service calls and ensure that all the calls are eventually completed.
+
+Which solution will meet these requirements?
+</pre>
+<div class="options">
+<label>
+<input type="radio" name="q9">
+A. Use an Amazon Simple Queue Service (Amazon SQS) queue to store events and invoke the Lambda function.
+</label>
+
+<label>
+<input type="radio" name="q9">
+B. Use an AWS Step Functions state machine to pass events to the Lambda function.
+</label>
+
+<label>
+<input type="radio" name="q9">
+C. Use an Amazon EventBridge rule to pass events to the Lambda function.
+</label>
+
+<label>
+<input type="radio" name="q9">
+D. Use an Amazon Simple Notification Service (Amazon SNS) topic to store events and invoke the Lambda function.
+</label>
+</div>
+
+<button onclick="checkAnswer(this,[0])">Check Answer</button>
+<button onclick="showAnswer(this,[0])">Show Answer</button>
+
+<div class="explanation">
+<button class="close-explanation" onclick="closeExplanation(this)">✕ Close</button>
+<b>Correct Answer: A</b><br><br>
+
+<b>Why Option A is Correct:</b><br>
+<ul>
+<li>✓ <b>Asynchronous processing:</b> Decouples caller from Lambda</li>
+<li>✓ <b>Queue persistence:</b> Messages stored until processed</li>
+<li>✓ <b>Retry mechanism:</b> Lambda automatically retries on failure</li>
+<li>✓ <b>Dead Letter Queue:</b> Handle permanent failures</li>
+<li>✓ <b>Eventual completion:</b> Guaranteed delivery with retries</li>
+<li>✓ <b>Rate limiting:</b> Controls Lambda concurrency</li>
+</ul><br>
+
+<b>How it works:</b>
+<pre>
+Application → SQS Queue → Lambda (polls queue) → Third-party service
+- If Lambda fails, message returns to queue
+- Automatic retries until success or DLQ
+</pre><br>
+
+<b>Why Other Options Are Wrong:</b><br>
+<b>Option B (Step Functions):</b> Overcomplicated for simple async calls, higher cost<br>
+<b>Option C (EventBridge):</b> No built-in retry/persistence like SQS<br>
+<b>Option D (SNS):</b> Pub/sub model, doesn't store/retry messages like SQS
+</div>
+</div>
+
 </div> <!-- end container -->
 
 <script>
